<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Jackz</string>
    <string name="main_btn_show_toast">Show Toast</string>
    <string name="main_input_hint">enter message...</string>
    <string name="main_btn_send_message">Send Message</string>
    <string name="main_btn_share">Share</string>
    <string name="main_btn_list">Show List</string>
    <string name="main_camera_share">Show your friends where we brought you!</string>

    //** App Theme Setting */

    <string name="theme">Change Theme</string>

    //** strings for activity_main */

    <string name="main_btn_start">Lets get started!</string>
    <string name="main_btn_info">How does it work?</string>

    //** strings for activity_info */

    <string name="info_txt_headline">So here is how it works...</string>
    <string name="info_txt_infotext">Apptivity helps you to find your new favorite locations! Just follow the questions on the screen and we will do the rest of the work for you.</string>

    //** strings for activity_started */

    <string name="started_txt_headline">Choose a category</string>
    <string name="category_txt_activity">Activities</string>
    <string name="category_txt_restaurant">Food</string>
    <string name="category_txt_sleeping">Accommodation</string>
    <string name="category_txt_shopping">Shopping</string>

    //** strings for activity_searchtype */

    <string name="searchtype_txt_headline">Start a new search or
        choose a saved one</string>

    <string name="searchtype_txt_newsearch">New Search</string>
    <string name="searchtype_txt_savedsearch">Saved Searches</string>

    //** strings for activity_savedssearch */
    <string name="savedsearch_txt_headline">Choose a saved search</string>
    <string name="savedsearch_txt_1">Feature not yet available</string>

    //** strings for activity_camera */
    <string name="camera_subject">Look what I found through Apptivity</string>
    <string name="camera_toast">Please take a picture first</string>
    <string name="camera_capture">Take a picture</string>
    <string name="camera_share">Share your picture</string>

    //** strings for result */
    <string name="result_reviews">Reviews:</string>
    <string name="result_hours">Hours:</string>
    <string name="result_phone">Phone:</string>
    <string name="result_adress">Address:</string>
    <string name="result_adress_btn">Show us the way!</string>
    <string name="result_share">Share this Location!</string>

    //** strings for started_refine */
    <string name="started_refine_txt_headline">Choose a category!</string>
    <string name="amusement_park">Amusement Park</string>
    <string name="aquarium">Aquarium</string>
    <string name="art_gallery">Art Gallery</string>
    <string name="bowling_alley">Bowling Alley</string>
    <string name="casino">Casino</string>
    <string name="gym">Gym</string>
    <string name="library">Library</string>
    <string name="movie_rental">Movie Rental</string>
    <string name="movie_theater">Cinema</string>
    <string name="museum">Museum</string>
    <string name="night_club">Club</string>
    <string name="park">Park</string>
    <string name="stadium">Stadium</string>
    <string name="zoo">Zoo</string>

    //** strings for started_refine_restaurant */
    <string name="bakery">Bakery</string>
    <string name="bar">Bar</string>
    <string name="cafe">Cafe</string>
    <string name="meal_takeaway">Takeaway</string>
    <string name="restaurant">Restaurant</string>

    //** strings for started_refine_shops */
    <string name="bicycle_store">Bycicle Store</string>
    <string name="book_store">Book Store</string>
    <string name="car_dealer">Car Dealership</string>
    <string name="clothing_store">Clothing Store</string>
    <string name="department_store">Department Store</string>
    <string name="drugstore">Drugstore</string>
    <string name="electronics_store">Electronics Store</string>
    <string name="florist">Florist</string>
    <string name="furniture_store">Furniture Store</string>
    <string name="grocery_or_supermarket">Grocery Store</string>
    <string name="jewelry_store">Jewelery Store</string>
    <string name="pet_store">Pet Store</string>




</resources>
