<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/result_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:maxLines="2"
        android:text="Hier kommt der Name des Ergebnisses"
        android:textColor="?attr/Text_Color"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="126dp"
        android:layout_height="123dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_headline"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/result_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="13dp"
        android:text="@string/result_reviews"
        android:textColor="?attr/Text_Color"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/result_headline" />

    <TextView
        android:id="@+id/result_review_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:text="4,2"
        android:textColor="?attr/Text_Color"
        android:textSize="15dp"
        app:layout_constraintStart_toEndOf="@+id/result_review"
        app:layout_constraintTop_toBottomOf="@+id/result_headline" />

    <TextView
        android:id="@+id/result_review5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="/5"
        android:textColor="?attr/Text_Color"
        android:textSize="15dp"
        app:layout_constraintStart_toEndOf="@+id/result_review_count"
        app:layout_constraintTop_toBottomOf="@+id/result_headline" />

    <ImageView
        android:id="@+id/imgRating"
        android:layout_width="23dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/star"
        app:layout_constraintStart_toEndOf="@+id/result_review5"
        app:layout_constraintTop_toBottomOf="@+id/result_headline" />

    <TextView
        android:id="@+id/result_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="13dp"
        android:text="@string/result_hours"
        android:textColor="?attr/Text_Color"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/result_review" />

    <TextView
        android:id="@+id/result_hours_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="13dp"
        android:text="Open"
        android:textColor="?attr/Text_Color"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/result_hours"
        app:layout_constraintTop_toBottomOf="@+id/result_review" />

    <TextView
        android:id="@+id/result_hours_actual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:text="10-23 Uhr"
        android:textColor="?attr/Text_Color"
        android:textSize="15dp"
        app:layout_constraintStart_toEndOf="@+id/result_hours"
        app:layout_constraintTop_toBottomOf="@+id/result_hours_open" />

    <TextView
        android:id="@+id/result_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="13dp"
        android:text="Web:"
        android:textColor="?attr/Text_Color"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/result_hours_actual" />

    <TextView
        android:id="@+id/result_website_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="13dp"
        android:text="www.google.com"
        android:textColor="?attr/Text_Color"
        android:textSize="15dp"
        app:layout_constraintStart_toEndOf="@+id/result_website"
        app:layout_constraintTop_toBottomOf="@+id/result_hours_actual" />

    <TextView
        android:id="@+id/result_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="13dp"
        android:text="@string/result_phone"
        android:textColor="?attr/Text_Color"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/result_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="13dp"
        android:text="015202083012"
        android:textColor="#1874ed"
        android:textSize="15dp"
        app:layout_constraintStart_toEndOf="@+id/result_phone"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/result_adress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="13dp"
        android:text="@string/result_adress"
        android:textColor="?attr/Text_Color"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_phone" />

    <TextView
        android:id="@+id/result_adress_street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="13dp"
        android:text="Schmachtenhagenerstr. 5"
        android:textColor="?attr/Text_Color"
        android:textSize="15dp"
        android:maxLines="2"
        app:layout_constraintStart_toEndOf="@+id/result_adress"
        app:layout_constraintTop_toBottomOf="@+id/result_phone" />

    <TextView
        android:id="@+id/result_adress_postal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:text="15806 Zossen"
        android:textColor="?attr/Text_Color"
        android:textSize="15dp"
        android:maxLines="2"
        app:layout_constraintStart_toEndOf="@+id/result_adress"
        app:layout_constraintTop_toBottomOf="@+id/result_adress_street" />

    <Button
        android:id="@+id/result_adress_btn"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/buttons_round"
        android:text="@string/result_adress_btn"
        android:textColor="?attr/Text_Color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_adress_postal" />

    <Button
        android:id="@+id/result_share"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/buttons_round"
        android:text="@string/result_share"
        android:textColor="?attr/Text_Color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_adress_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>